gap in gallery fixed

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -106,7 +106,7 @@
   }
 
   .title-wrapper {
-    margin-bottom: 56px;
+    margin-bottom: 30px;
   }
 
   .line-small {
